<resources>
    <string name="app_name">Sudoku</string>
    <string name="welcome_text">聪 明 你 的 大 脑</string>
    <string name="index_sudoku_text">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">新 游 戏</string>
    <string name="game_guide">游戏说明</string>
    <string name="game_setting">设 置</string>
    <string name="ranking_list">排 行 榜</string>
    <string name="continue_game">继续游戏</string>
    <string name="difficulty_easy">初 级</string>
    <string name="difficulty_medium">中 级</string>
    <string name="difficulty_difficult">高 级</string>
    <string name="choose_difficulty">选择游戏难度</string>
    <string name="sudoku_description">&#160;&#160;&#160;&#160;数独是一种推理演算的逻辑游戏。玩家需要根据9×9盘面上的已知数字，推理出所有剩余空格的数字，并满足每一行、每一列、每一个粗线宫内的数字均含1&#8211;9,不重复。</string>
    <string name="start_guide">点击观看操作教程</string>
    <string name="share">分享</string>

</resources>
